Mapstruct foi adicionado para o mapeamento